# django-milvus

./: .gitignore  manage.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  create_pr.py  installation.py  set_env.py
django_milvus/: __init__.py  apps.py  connection.py  fields.py  lookups.py  utils.py
django_milvus_tests/: apps.py  models.py  settings.py  urls.py  wsgi.py
django_milvus_tests/migrations/: 0001_initial.py  0002_auto_20211109_0224.py  0003_productuuid.py
django_milvus_tests/profiles/: Makefile  prof_field.py
django_milvus_tests/tests/: Makefile  docker-compose.yml  test_conn.py  test_field.py  test_uuid.py
milvus/: docker-compose.yml  milvus.yml
