[tool.poetry]
name = "django-milvus"
version = "0.2.0"
description = "Store and search similar vectors in Django using milvus"
authors = ["Yu Li <ylilarry@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]
Django = "^3.2.9"
black = "mypy"
mypy = "^0.910"
pymilvus = "2.0.0rc8"
django-stubs = "^1.9.0"
coverage = "^6.1.1"
autoflake8 = "^0.2.2"
snakeviz = "^2.1.1"
isort = "^5.10.0"
flake8 = "^4.0.1"
autoflake = "^1.4"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
